--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,4 +1,12 @@
 jobs:
+
+  on:
+    push:
+      branches:
+        - '**'
+      tags:
+        - '**'
+
   test:
     runs-on: ubuntu-latest
     steps:
