--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: test
+      - name: Hexlet project check
+        uses: hexlet/project-action@release
+      - name: Run tests
         run: poetry run pytest
         with:
           hexlet-id: ${{ secrets.HEXLET_ID }}
