--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -1,19 +1,16 @@
-name: hexlet-check
-
-on:
-  push:
-    branches:
-      - '**'
-    tags:
-      - '**'
+name: pytest
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Hexlet project check
-        uses: hexlet/project-action@release
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          hexlet-id: ${{ secrets.HEXLET_ID }}
+          python-version: '3.9'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      - name: Run tests
+        run: pytest
