--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -13,6 +13,6 @@ jobs:
         with:
           python-version: '3.9'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: poetry install
       - name: Run tests
         run: pytest
