--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -13,6 +13,16 @@ jobs:
         with:
           python-version: '3.9'
       - name: Install dependencies
-        run: poetry install
-      - name: Run tests
-        run: pytest
+        run: make install
+      - name: run lint
+        run: make lint
+      - name: run tests
+        run: make pytest
+      - name: testing coverage
+        run: paambaati/codeclimate-action@v3.2.0
+        if: github.ref_name == 'main'
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+        with:
+          coverageCommand: make coverage
+          debug: true
