--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -5,13 +5,14 @@ on: push
 jobs:
   test:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
+
+
+  steps:
+      - uses: actions/checkout@master
+      - name: set up Python
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.9'
+          python-version: '3.10'
       - name: Install dependencies
         run: make install
       - name: run lint
