--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: install poetry
+        uses: snok/install-poetry@master
       - name: Install dependencies
         run: make install
       - name: run lint
