--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -24,10 +24,7 @@ jobs:
       - name: run tests
         run: make pytest
       - name: testing coverage
-        run: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make coverage
-          debug: true
+        run: paambaati/codeclimate-action@v3.2.0 --coverage-command "make coverage" --debug
