--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -19,6 +19,8 @@ jobs:
         uses: snok/install-poetry@master
       - name: Install dependencies
         run: make install
+      - name: install flake8
+        run: poetry install flake8
       - name: run lint
         run: make lint
       - name: run tests
