--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: make install
       - name: install flake8
-        run: poetry install flake8
+        run: poetry add flake8
       - name: run lint
         run: make lint
       - name: run tests
