--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -16,10 +16,7 @@ jobs:
         with:
           python-version: '3.10'
       - name: install poetry
-        run: |
-          curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-          echo 'export PATH="$HOME/.poetry/bin:$PATH"' >> $HOME/.bashrc
-          source $HOME/.bashrc
+        uses: snok/install-poetry@master
       - name: Install dependencies
         run: make install
       - name: install flake8
