--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: set up Python 3.10
+      - name: set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -29,9 +29,7 @@ jobs:
           ./cc-test-reporter before-build
       - name: test
         run: make test-cov
+      - name: Sending Repo
         env:
           GITHAB_TOKEN: ${{ secrets. }}
-        uses: paambaati/codeclimate-action@v3.2.0
-        with:
-          coverageCommand: make coverage
-          debug: true
+        run: ./cc-test-reporter after-build -r "$GITHAB_TOKEN"
