--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -24,7 +24,7 @@ jobs:
         run: make lint
       - name: Create Reporter
         run: |
-          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 ./cc-test-reporter
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.0-linux-amd64 ./cc-test-reporter
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
       - name: test
