--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -22,12 +22,14 @@ jobs:
         run: make install
       - name: run lint
         run: make lint
+      - name: run test
+        run: make test
       - name: Create Reporter
         run: |
           curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-0.11.0-linux-amd64 > ./cc-test-reporter
           chmod +x ./cc-test-reporter
           ./cc-test-reporter before-build
-      - name: test
+      - name: run test cov
         run: make test-cov
       - name: Sending Repo
         env:
