--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Sending Repo
         env:
           GITHAB_TOKEN: ${{ secrets.TEST_REPORTER_ID }}
-        run: ./cc-test-reporter after-build -r "$GITHAB_TOKEN"
+        run: ./cc-test-reporter after-build --coverage-input-type=coverage.py -r $CC_TEST_REPORTER_ID --exit-code $?
