--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           GITHAB_TOKEN: ${{ secrets.TEST_REPORTER_ID }}
         run:  |
-         ./cc-test-reporter after-build -r $TEST_REPORTER_ID
+         ./cc-test-reporter after-build -r $CC_TEST_REPORTER_ID
