--- a/.github/workflows/pyci.yml
+++ b/.github/workflows/pyci.yml
@@ -11,11 +11,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - name: set up Python
+      - uses: actions/checkout@v2
+      - name: set up Python 3.8
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: '3.8'
       - name: install poetry
         run: pip install poetry
       - name: Install dependencies
