--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   hexlet_python_package/scripts/*.py: WPS421
+  gendiff/generate_diff.py: E501,C901
 
 [tool:pytest]
 norecursedirs = __pycache__
