--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ per-file-ignores =
   gendiff/gen_plain.py: E501,C901
   gendiff/generate_stylish.py: E501,C901
   gendiff/scripts/gendiff.py: E501,C901
+  gendiff/generate_json.py: E501
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
