--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ per-file-ignores =
   gendiff/generate_diff.py: E501,C901
   gendiff/gen_plain.py: E501,C901
   gendiff/generate_stylish.py: E501,C901
-  gendiff/scripts/gendiff_main.py: E501,C901
+  gendiff/scripts/gendiff.py: E501,C901
   gendiff/generate_json.py: E501
 [tool:pytest]
 norecursedirs = __pycache__
