--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ per-file-ignores =
   # it is possibble to have prints in scripts
   hexlet_python_package/scripts/*.py: WPS421
   gendiff/generate_diff.py: E501,C901
-  gendiff/gen_plain.py: E501,C901
+  gendiff/gen_plain.py: E501,C901,E111
   gendiff/generate_stylish.py: E501,C901
   gendiff/scripts/gendiff.py: E501,C901
   gendiff/generate_json.py: E501
