--- a/setup.cfg
+++ b/setup.cfg
@@ -16,11 +16,12 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   hexlet_python_package/scripts/*.py: WPS421
-  gendiff/generate_diff.py: E501,C901
-  gendiff/gen_plain.py: E501,C901,E111
-  gendiff/generate_stylish.py: E501,C901
+  gendiff/formaters/generate_diff.py: E501,C901
+  gendiff/formaters/gen_plain.py: E501,C901,E111
+  gendiff/formaters/generate_stylish.py: E501,C901
   gendiff/scripts/gendiff.py: E501,C901
-  gendiff/generate_json.py: E501
+  gendiff/scripts/cli.py: E501
+  gendiff/formaters/generate_json.py: E501
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
