refactoring all formaters

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,8 +19,10 @@ per-file-ignores =
   gendiff/formaters/generate_diff.py: E501,C901
   gendiff/formaters/gen_plain.py: E501,C901,E111
   gendiff/formaters/generate_stylish.py: E501,C901
+  gendiff/formaters/generate_json.py: E501,C901
+  gendiff/formaters/generate.py: E501,C901
   gendiff/scripts/gendiff.py: E501,C901
-  gendiff/scripts/cli.py: E501
+  gendiff/cli.py: E501
   gendiff/formaters/generate_json.py: E501
 [tool:pytest]
 norecursedirs = __pycache__
