--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ per-file-ignores =
   gendiff/formaters/gen_plain.py: E501,C901,E111
   gendiff/formaters/generate_stylish.py: E501,C901
   gendiff/formaters/generate_json.py: E501,C901
-  gendiff/formaters/generate.py: E501,C901
+  gendiff/generate.py: E501,C901
   gendiff/scripts/gendiff.py: E501,C901
   gendiff/cli.py: E501
   gendiff/formaters/generate_json.py: E501
