--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "gendiff"}]
 python = "^3.10"
 pytest-cov = "^4.0.0"
 pyyaml = "^6.0"
+flake8 = "^6.0.0"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
