--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ gendiff = "gendiff.scripts.gendiff:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.2"
+flake8 = "^6.0.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
