--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "gendiff"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 pyyaml = "^6.0"
+pytest-cov = "^4.0.0"
+flake8 = "^5.0.4"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.scripts.gendiff:main"
