--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,8 @@ ignore =
 
 per-file-ignores =
   # it is possibble to have prints in scripts
+  gendiff/generate.py: C901
+  gendiff/formaters/gen_plain.py: C901
   hexlet_python_package/scripts/*.py: WPS421
 [tool:pytest]
 norecursedirs = __pycache__
